Fixed alignment

--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -73,6 +73,7 @@
     width: 24px;
     height: 24px;
     transition: transform 0.2s ease-in-out;
+    vertical-align: middle;
 }
 
 .favorite-btn.favorited img {
